# research

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: config.py  crud.py  db.py  limiter.py  logging.py  main.py  models.py
backend/app/routers/: health.py  submissions.py
backend/app/schemas/: __init__.py  submissions.py
backend/app/services/: reconciler.py  sheets.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/secrets/: .gitkeep
backend/tests/: conftest.py  test_openapi_contract.py  test_reconciler.py  test_schemas.py  test_sheets.py  test_submissions_api.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: App.tsx  index.css
frontend/src/components/: CTABand.tsx  Figure.tsx  Flywheel.tsx  Footer.tsx  Marks.tsx  Nav.tsx  PageHero.tsx
frontend/src/lib/: content.ts  images.ts  submit.test.ts  submit.ts  ui.tsx
frontend/src/pages/: About.tsx  CoE.tsx  Contact.tsx  Enablement.tsx  Home.tsx  Insights.tsx  NotFound.tsx  Partnerships.tsx
frontend/src/pages/__tests__/: Contact.test.tsx
frontend/src/test/: setup.ts
