[project]
name = "trueline-research-backend"
version = "1.0.0"
description = "Lead-capture backend for the Trueline Research site (forms -> Postgres -> Google Sheets)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "starlette==1.3.0",  # pinned: 0.41.x (pulled by old fastapi) had CVE-2025-54121/62727 + PYSEC-2026-161
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "email-validator==2.2.0",
    "gspread==6.1.4",
    "google-auth==2.37.0",
    "slowapi==0.1.9",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live Postgres (TEST_DATABASE_URL). Skipped when unset.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
